--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
                <h5>{{ message }}</h5>
            {% endfor %}
           <div align="center" class="form-group">
-          <label for="option">Entity ID: </label>
+          <label for="option">Entry ID: </label>
           <select class="form-control w-auto" name="option" width="300px" id="list" onchange:"this.form.submit()">
               <option value="" SELECTED></option>
           {% for o in option_list %}
